<resources>
    <string name="app_name">vkDisco</string>
    <integer name="com_vk_sdk_AppId">5666525</integer>
    <string name="btn_load_file_text">Load file</string>
    <string name="btn_play_text">Play</string>
    <string name="btn_pause_text">Pause</string>
    <string name="btn_stop_text">Stop</string>
    <string name="text_bass_device_init_fail">Device init fail!</string>
    <string name="text_bass_streamcreatefile_fail">Stream from file creation fail!</string>
    <string name="btn_load_url_text">Load URL</string>
    <string name="action_settings">Settings</string>
    <string name="search_button_text">Search</string>
    <string name="mainmenu_button_text">Main menu</string>
    <string name="title_vk_friends_dialog">Choose VK user</string>
    <string name="text_label_no_metadata">No metadata</string>
    <string name="action_bar_btn_vk_title">VK</string>
    <string name="title_vk_tracks_dialog">VK tracks</string>
    <string name="text_placeholder_title">Title</string>
    <string name="text_placeholder_artist">Artist</string>
    <string name="text_placeholder_time">--:--</string>
    <string name="text_placeholder_album">Unknown album</string>
    <string name="text_label_choose_file">Choose file(s)</string>
    <string name="swap">Swap</string>
    <string name="delete">Delete</string>
    <string name="text_menu_export_playlist">Export playlist</string>
    <string name="text_menu_import_playlist">Import playlist</string>
    <string name="text_menu_clear_playlist">Clear playlist</string>
    <string name="text_label_filename">Filename</string>
    <string name="text_button_dialog_save">Save</string>
    <string name="text_filename_empty">Filename empty</string>
    <string name="text_dialog_developers">Developers:</string>
    <string name="text_dialog_developers_list">Andrii Tkachenko\nDmytro Dmytriev\nOleksandr Hryb\nOleksii Lytovchenko\nStanislav Riabkov</string>
    <string name="text_dialog_nus">Gr. 3151, NUS, 2016</string>
    <string name="text_title_about_dialog">About...</string>
    <string name="text_button_ok">OK</string>
</resources>
