<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btnVK"
        android:icon="@drawable/ic_vk_white"
        android:title="@string/action_bar_btn_vk_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuExportPlaylist"
        android:title="@string/text_menu_export_playlist"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuImportPlaylist"
        android:title="@string/text_menu_import_playlist"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuClearPlaylist"
        android:title="@string/text_menu_clear_playlist"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuAbout"
        android:title="@string/text_title_about_dialog"
        app:showAsAction="never" />
</menu>