<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">
    <Button
        android:id="@+id/btnLoadFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_load_file_text"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle">
        <Button
            android:id="@+id/btnPlay"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/btn_play_text"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btnPause"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/btn_pause_text"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btnStop"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/btn_stop_text"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
    <SeekBar
        android:id="@+id/sbTrackProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="0"
        android:max="100"/>
    <ProgressBar
        android:id="@+id/pbIndicationLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        style="?android:attr/progressBarStyleHorizontal"/>
    <ProgressBar
        android:id="@+id/pbIndicationRight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        style="?android:attr/progressBarStyleHorizontal"/>
</LinearLayout>
