<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:weightSum="1" />

    <ImageView
        android:id="@+id/ivAlbumArt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/player_activity_blocks_margins"
        android:layout_weight="1"
        android:contentDescription="@null"
        app:srcCompat="@drawable/ic_queue_music" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/player_activity_blocks_margins"
        android:layout_marginBottom="@dimen/player_activity_blocks_margins">

        <TextView
            android:id="@+id/tvAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_placeholder_album"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:maxLines="1"
            android:textSize="12sp"
            android:padding="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnShuffle"
                android:layout_width="@dimen/button_player_normal"
                android:layout_height="@dimen/button_player_normal"
                android:layout_margin="2dp"
                android:contentDescription="@null"
                android:background="@drawable/button_player_background"
                app:srcCompat="@drawable/ic_shuffle" />

            <ImageButton
                android:id="@+id/btnPrevious"
                android:layout_width="@dimen/button_player_normal"
                android:layout_height="@dimen/button_player_normal"
                android:layout_margin="2dp"
                android:contentDescription="@null"
                android:background="@drawable/button_player_background"
                app:srcCompat="@drawable/ic_skip_previous" />

            <ImageButton
                android:id="@+id/btnPlayPause"
                android:layout_width="@dimen/button_player_big"
                android:layout_height="@dimen/button_player_big"
                android:layout_margin="2dp"
                android:contentDescription="@null"
                android:background="@drawable/button_player_background"
                app:srcCompat="@drawable/ic_play_circle_filled" />

            <ImageButton
                android:id="@+id/btnNext"
                android:layout_width="@dimen/button_player_normal"
                android:layout_height="@dimen/button_player_normal"
                android:layout_margin="2dp"
                android:contentDescription="@null"
                android:background="@drawable/button_player_background"
                app:srcCompat="@drawable/ic_skip_next" />

            <ImageButton
                android:id="@+id/btnRepeat"
                android:layout_width="@dimen/button_player_normal"
                android:layout_height="@dimen/button_player_normal"
                android:layout_margin="2dp"
                android:contentDescription="@null"
                android:background="@drawable/button_player_background"
                app:srcCompat="@drawable/ic_repeat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCurrentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:text="@string/text_placeholder_time"
                android:textColor="@color/primaryText"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/sbTrackProgress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvFullTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:text="@string/text_placeholder_time"
                android:textColor="@color/primaryText"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_placeholder_title"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:maxLines="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_placeholder_artist"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:maxLines="1"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>